[package]
name = "hnsw"
version = "0.12.0-alpha.0"
authors = ["Geordon Worley <vadixidav@gmail.com>", "Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
description = "Fast approximate nearest neighbors"
keywords = ["hamming", "distance", "nearest", "neighbor", "search"]
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/WorldSEnder/hnsw"
documentation = "https://docs.rs/hnsw/"
license = "MIT"
readme = "README.md"

[features]
default = []
serde1 = ["smallvec/serde", "serde"]

[[bench]]
name = "benches"
harness = false

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
rand_core = "0.9"
rand_pcg = "0.9"
smallvec = { version = "1.6.1", features = ["const_generics"] }
serde = { version = "1.0.126", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
space = { version = "0.17.0", features = ["serde", "alloc"] }
hamming-heap = "0.4.1"
rand = "0.9"
rand_pcg = { version = "0.9", features = ["serde"] }
criterion = "0.3.4"
gnuplot = "0.0.37"
structopt = "0.3.22"
easybench = "1.1.0"
itertools = "0.10.1"
float-ord = "0.3.1"
byteorder = "1.4.3"
serde_json = "1.0.64"
num-traits = "0.2.14"
bitarray = { version = "0.9.1", default-features = false, features = ["space"] }

[profile.dev]
opt-level = 3

[profile.test]
# The tests take a very long time without optimization.
opt-level = 3

[profile.release]
codegen-units = 1
# This is here so we can generate flamegraphs.
debug = true

[package.metadata.docs.rs]
all-features = true
